# idroid

./: Cargo.toml  README.MD
idroid/: Cargo.toml
idroid/src/: buffer.rs  lib.rs  load_texture.rs  mvp_uniform_obj.rs  shader.rs  shader2.rs  texture.rs  vertex.rs
idroid/src/geometry/: plane.rs
idroid/src/math/: edge_inset.rs  mod.rs  point3d.rs  position.rs  rect.rs  size.rs  touch_point.rs
idroid/src/node/: binding_group_setting.rs  binding_group_setting_node.rs  binding_group_setting_node2.rs  binding_group_setting_node3.rs  bufferless_fullscreen_node.rs  compute_node.rs  compute_node2.rs  dynamic_binding_group_node.rs  dynamic_uniform_binding_group.rs  image_view_node.rs  mod.rs  view_node.rs
idroid/src/utils/: depth_stencil.rs  matrix_helper.rs  mod.rs
src/: buffer.rs  lib.rs  load_texture.rs  mvp_uniform_obj.rs  shader.rs  vertex.rs
src/geometry/: line.rs  mod.rs  plane.rs
src/math/: position.rs  rect.rs
src/node/: binding_group_setting.rs  bufferless_fullscreen_node.rs  compute_node.rs  view_node.rs
src/utils/: hud.rs  mod.rs
uni-view/: Cargo.toml
uni-view/src/: app_view.rs  ios_fs.rs  ios_view.rs  lib.rs  mac_fs.rs  mac_view.rs
uni-view/src/ffi/: mod.rs  strings.rs  web.rs
uni-view/src/fs/: ios_fs.rs  mod.rs
