[workspace]
members = [
    "idroid",
    "uni-view",
]

# [patch.crates-io]
# wgpu-native = { git = "https://github.com/gfx-rs/wgpu", rev = "c3609d71c95dc5be1672c737ee4010e6a9408748", features = ["local", "metal-auto-capture"] }
# gfx-backend-vulkan = { path = "../my_forks/hal-0.3-fork/src/backend/vulkan"}
# gfx-hal = { path = "../my_forks/hal-0.3-fork/src/hal"}
# gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx", branch = "hal-0.3", rev = "143848c1c3a8ed2af9f6ed333bfab9e8ed0017ae" }
# gfx-hal = { git = "https://github.com/gfx-rs/gfx", branch = "hal-0.3", rev = "143848c1c3a8ed2af9f6ed333bfab9e8ed0017ae"}

