[package]
name = "idroid"
version = "0.2.6"
authors = ["jinleili"]
edition = "2021"
rust-version = "1.64"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
# [target.'cfg(target_os = "android")'.lib]
# crate-type = ["cdylib"]

[dependencies]
libc = "*"
app-surface = { path = "../wgpu-on-app/app-surface" }
wgpu = "0.14"

image = { version = "0.24", default-features = false, features = ["png"] }
bytemuck = { version = "1.12", features = ["derive"] }
nalgebra-glm = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.60", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "HtmlCanvasElement",
    "Location",
    "Window",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType"
] }
