[package]
name = "idroid"
version = "0.2.6"
authors = ["li jinlei <grenlight@icloud.com>"]
edition = "2018"

[lib]
name = "idroid"
crate-type = ["rlib", "staticlib"]
# [target.'cfg(target_os = "android")'.lib]
# crate-type = ["cdylib"]

[dependencies]
libc = "*"
wgpu = {git = "https://github.com/gfx-rs/wgpu", rev="564330432f60b967a69b36a0094d72e1e77ebb72"}
# wgpu = { path = "../../../wgpu-rs" }
uni-view = { path="../uni-view" }

nalgebra-glm = "*"
image = "0.23"
lazy_static = "*"
zerocopy = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.73" 
js-sys = "0.3.50"
wasm-bindgen-futures = "0.4.23"
web-sys = { version = "=0.3.51", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "HtmlCanvasElement",
    "Location",
    "Window",
    "XmlHttpRequest",
]}

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
objc = "*"
winit = { version = "0.25", features = ["web-sys"] }
raw-window-handle = "0.3"
