[package]
name = "idroid"
version = "0.2.6"
authors = ["li jinlei <grenlight@icloud.com>"]
edition = "2018"

[lib]
name = "idroid"
crate-type = ["rlib", "staticlib"]
# [target.'cfg(target_os = "android")'.lib]
# crate-type = ["cdylib"]

[dependencies]
libc = "*"
wgpu = {git = "https://github.com/gfx-rs/wgpu", rev="e8c236cd"}
# wgpu = { path = "../../../wgpu-rs" }
uni-view = { path="../uni-view" }

nalgebra-glm = "*"
image =  { version = "0.23", default-features = false, features = ["png"] }
zerocopy = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "=0.3.53", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "HtmlCanvasElement",
    "Location",
    "Window",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
]}
