[package]
name = "uni-view"
version = "0.2.6"
authors = ["Li Jinlei <grenlight@icloud.com>"]
edition = "2018"

[dependencies]
libc = "*"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", version = "0.8",  rev = "7486bdad64bb5d17b709ecccb41e063469efff88" }
# wgpu = { path = "../../../wgpu-rs" }

lazy_static = "*"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"

[target.'cfg(any(target_os = "macos", target_arch = "wasm32"))'.dependencies]
winit = { version = "0.25", features = ["web-sys"] }
raw-window-handle = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.73" 
js-sys = "0.3.50"
wasm-bindgen-futures = "0.4.23"
web-sys = { version = "=0.3.50", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "HtmlCanvasElement",
    "Location",
    "Window",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
]}
console_log = "0.1.2"


[target.'cfg(target_os = "ios")'.dependencies]
objc = "*"
objc-foundation = "*"
core-graphics = "*"
