[package]
name = "uni-view"
version = "0.2.6"
authors = ["Li Jinlei <grenlight@icloud.com>"]
edition = "2018"

[dependencies]
libc = "*"
wgpu = {git = "https://github.com/gfx-rs/wgpu", rev="1c086a51ff9bd9670f1447dca5fe797e052c73f9"}
# wgpu = { path = "../../../wgpu-rs" }
lazy_static = "*"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"

[target.'cfg(any(target_os = "macos", target_arch = "wasm32"))'.dependencies]
winit = { version = "0.25", features = ["web-sys"] }
raw-window-handle = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.76" 
js-sys = "0.3.50"
wasm-bindgen-futures = "0.4.23"
web-sys = { version = "=0.3.53", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "HtmlCanvasElement",
    "Location",
    "Window",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
]}
console_log = "0.1.2"


[target.'cfg(target_os = "ios")'.dependencies]
objc = "*"
objc-foundation = "*"
core-graphics = "*"
